# palindrome

./: .clang-format  CMakeLists.txt  README.md  format_code.bat
.github/: dependabot.yml
.github/workflows/: build_project.yml  lint.yml  validate_changes.yml
includes/: libPalindrome.h
src/: CMakeLists.txt  libPalindrome.cpp
tests/: CMakeLists.txt  main.cpp
